REGRESSION(r155957): Selection rects are incorrect when the selection contains BR elements. https://bugs.webkit.org/show_bug.cgi?id=132596 <rdar://problem/16692206>

Reviewed by Antti Koivisto.

This patch adds an implementation of collectSelectionRects to RenderLineBreak.
It uses the same logic used by RenderText to compute and annotate the returned rect
which is computed, like the caret rect, using information from the rootline box.

* rendering/RenderLineBreak.cpp:
(WebCore::RenderLineBreak::collectSelectionRects):
* rendering/RenderLineBreak.h:



Canonical link: https://commits.webkit.org/150639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168364 268f45cc-cd09-0410-ab3c-d52691b4dbfc